--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
                 height: 100%;
                 margin: 0px;
                 padding: 0px;
+                background-color: black;
             }
             body {
                 position: absolute;
